--- a/tempo/styles.css
+++ b/tempo/styles.css
@@ -1,14 +1,5 @@
-
-body {
-    min-height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: black;
-}
-
-#clock {
-    font-family: 'Orbitron', sans-serif;
-    font-size: 5em;
-    color: rgb(76, 151, 1);
+body{
+  background-color: black;
+  overflow-y: hidden; /* Hide scrollbars */
+  overflow-x: hidden; /* Hide horizontal scrollbar */
 }
