--- a/clima 2/styles.css
+++ b/clima 2/styles.css
@@ -5,6 +5,8 @@ body {
     justify-content: center;
     align-items: center;
     background-color: black;
+    overflow-y: hidden; /* Hide scrollbars */
+    overflow-x: hidden; /* Hide horizontal scrollbar */
 }
 
 #clock {
